--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,50 @@
 }
 
 /* -------------------------------------------------------------------------- */
+/*                              ANIMATIONS                                    */
+/* -------------------------------------------------------------------------- */
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
+/* -------------------------------------------------------------------------- */
 /*                              MAIN STYLES                                   */
 /* -------------------------------------------------------------------------- */
 
@@ -1071,6 +1115,8 @@ input[type="radio"].visually-hidden {
 
 .contacts__map {
   margin-top: 24px;
+
+  cursor: pointer;
 }
 
 .about__btn,
@@ -1105,14 +1151,37 @@ input[type="radio"].visually-hidden {
   margin-top: -300px;
 }
 
+.modal--map iframe {
+  position: relative;
+  z-index: 2;
+
+  border: none;
+}
+
+.modal--map p {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  margin: 0;
+}
+
 .modal--open {
   display: block;
+
+  animation: bounce 0.6s;
+}
+
+.modal--error {
+  animation: shake 0.6s;
 }
 
 .modal__close {
   position: absolute;
   top: 22px;
   right: 22px;
+  z-index: 5;
 
   width: 55px;
   height: 55px;
